[package]
name = "forwarder"
version = "0.1.9"
edition = "2021"

[dependencies]
bore-cli = "0.5.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
anyhow = { version = "1" }
mac_address = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
self-github-update-enhanced = { version = "0.39.0", features = ["archive-zip"] }
duct={version = "0.13.0"}
winapi = {version = "0.3",features = ["sysinfoapi"]}
nix ={version = "0.29"}

[target.'cfg(target_family = "unix")'.dependencies.openssl]
version = "0.10"
features = ["vendored"]
